# value_iteration3

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile
docs/superpowers/plans/: 2026-04-10-value-iteration-fpga.md  2026-04-11-vi-fpga-phase3-driver.md  2026-04-13-fpga-directory-refactor.md  2026-04-13-matlab-hdl-coder-streaming.md  2026-05-29-vi-ros2.md  2026-06-04-vi-ros-compare-benchmark.md  2026-06-08-vi-reference-faithful-port.md  2026-06-09-vi-u64-fast-solvers.md
docs/superpowers/specs/: 2026-04-10-value-iteration-fpga-design.md  2026-04-11-vi-fpga-phase3-driver-design.md  2026-04-13-matlab-hdl-coder-streaming-design.md  2026-04-14-matlab-src-refactor-design.md  2026-05-22-vi-rs-algorithm-port-design.md  2026-05-29-vi-ros2-design.md  2026-06-08-vi-reference-faithful-port-design.md  2026-06-09-vi-ssp-priority-acceleration-design.md  2026-06-09-vi-u64-fast-solvers-design.md
driver/uio/: libvi_sweep.c  vi_device.h  vi_device_linux.c  vi_device_mock.c
fpga/: Makefile
fpga/hls/stream/src/: compute_row.cpp  compute_row.h  load_store_row.cpp  stream_strip.cpp  stream_strip.h  vi_sweep_stream_top.cpp
fpga/hls/study/: hls_config.cfg
fpga/hls/study/src/: study_top.cpp
fpga/hls/vi_sweep/src/: compute_bellman.cpp  vi_sweep_top.cpp  vi_types.h
fpga/hls/vi_sweep/tb/: vi_reference.cpp  vi_sweep_tb.cpp
fpga/hls/vi_sweep_stream/src/: compute_row.cpp  stream_strip.cpp  vi_stream_types.h  vi_sweep_stream_top.cpp
fpga/hls/vi_sweep_stream/tb/: vi_sweep_stream_tb.cpp
fpga/matlab/testbench/: gen_transitions.m  tb_full_sweep.m
fpga/pynq/: demo_vi.py  explore_map.ipynb  vi_overlay.py
fpga/pynq/stream/: demo_vi_stream.ipynb  explore_map.ipynb  vi_bd_wrapper.hwh  vi_overlay_stream.py
fpga/pynq/tile/: vi_overlay_tile.py
fpga/scripts/: Makefile  build_vivado.tcl  export_hls_ip.tcl  export_hls_ip_stream.tcl  run_csim.tcl
fpga/tcl/: build_vivado.tcl  create_project_stream.tcl  create_project_tile.tcl  export_hls_ip_stream.tcl  export_hls_ip_tile.tcl  run_csim_stream.tcl  run_csim_tile.tcl
fpga/vivado/ultra96v2/: create_bd.tcl  create_project.tcl
host/: Makefile
host/src/: map_pgm.c  map_pgm.h
host/test/data/: tiny.pgm
host/test/hw/: run_big.sh  run_smoke.sh
matlab/: README.md  run_matlab_tests.m
matlab/bench/: benchmark_vi.m
matlab/cosim/: cosim_tb.m
matlab/derived/: artifacts.dmr  resultservice.dmr
matlab/derived/mtestmanager/: coverage.summary  history.dmr-wal  results.dmr-wal
matlab/resources/project/root/: -HIxHwXpyEk_-r3U2vjUq4KjM0Qd.xml  amwE3LmoG--0pRWluRol6WgE4ZYd.xml  rXw9LBgXC_p5ZGxl615wAW7lYyod.xml  rXw9LBgXC_p5ZGxl615wAW7lYyop.xml
matlab/soc/: build_bitstream.m  soc_config.m
matlab/src/: coerce_transition_model.m  vi_full_reference.m  vi_params.m
matlab/test/: TestBase.m  TestBitboardPrimitives.m
matlab/testbench/: tb_compute_row.m  tb_cost_of.m  tb_full_sweep.m  tb_goal_area.m  tb_paper_vs_fpga.m  tb_stream_strip.m
matlab/workflows/benchmarks/: benchmark_vi.m  benchmark_vi_codegen.m
petalinux/: Makefile
petalinux/docker/: Dockerfile
petalinux/scripts/: build.sh
scripts/: compare_bench.sh  compare_strict.sh  ros2_build.sh  ros2_test.sh
vi_compare/: README.md  params.yaml
vi_compare/benches/house/compare/: compare.py  cross_check.py  make_u64_report.py
vi_compare/benches/house/ros1/: bench.launch  run_ros1_bench.sh
vi_compare/benches/tsudanuma/: plot.py  report_paper_style.md
vi_compare/compare/: compare.py  make_u64_report.py  test_compare.py
vi_compare/docker/: Dockerfile.ros1  docker-compose.yml
vi_compare/f3d/: f3d_bench.py  run_f3d_bench.sh
vi_compare/results/: .gitignore
vi_compare/ros1/: bench.launch  bench_client.py  run_ros1_bench.sh
vi_compare/ros2/: bench_client.py  run_ros2_bench.sh  smoke.sh  vi_node_params.yaml
vi_compare/tsudanuma/: pool_tsudanuma.py  run_ros1_tsudanuma.sh
vi_compare/u64/: run_u64_bench.sh  u64_bench.py
vi_compare/video/: render_frames_full.py
vi_fpga/driver/uio/: Makefile
vi_fpga/host/: Makefile
vi_fpga/host/src/: vi_cli.c
vi_fpga/host/test/: test_map_pgm.c  test_vi_run_mock.c  vi_assert.h
vi_fpga/petalinux/docker/: Dockerfile
vi_fpga/petalinux/scripts/: setup.sh
vi_fpga/pynq/tile/: demo_vi_tile.ipynb  explore_map.ipynb
vi_fpga/tcl/: export_hls_ip_stream.tcl
vi_ros2/: .gitignore
vi_ros2/docker/: Dockerfile
vi_ros2/vi_interfaces/: CMakeLists.txt  package.xml
vi_ros2/vi_node/: Cargo.toml  package.xml
vi_ros2/vi_node/launch/: vi_navigation.launch.py
vi_ros2/vi_node/src/: bridge.rs  lib.rs  main.rs  solver_factory.rs  sweep_thread.rs
vi_ros2/vi_node/tests/: integration.rs  oracle_equivalence.rs
vi_rs/: Cargo.toml
vi_rs/vi_algorithm/: Cargo.toml
vi_rs/vi_algorithm/src/: context.rs  lib.rs  policy.rs
vi_rs/vi_algorithm/src/bitboard/: enumerate.rs  mod.rs  ops.rs
vi_rs/vi_algorithm/src/block/: mod.rs  pyramid.rs  refine.rs
vi_rs/vi_algorithm/src/frontier/: coarse_theta.rs  f2d.rs  f3d.rs  mod.rs  stack.rs  tau.rs  topk.rs
vi_rs/vi_algorithm/src/kernel/: bellman.rs  norm.rs
vi_rs/vi_algorithm/src/reference/: action_table.rs  mod.rs
vi_rs/vi_algorithm/src/stream/: mod.rs
vi_rs/vi_algorithm/tests/: pyramid_montecarlo_parity.rs
vi_rs/vi_bench/: Cargo.toml
vi_rs/vi_bench/benches/: bitboard.rs  block_pyramid.rs  frontier.rs  reference.rs  stream_mimic.rs
vi_rs/vi_bench/src/: fixtures.rs  lib.rs  pgm.rs
vi_rs/vi_core/: Cargo.toml
vi_rs/vi_core/src/: cost.rs  goal.rs  lib.rs  params.rs  transitions.rs  types.rs
vi_rs/vi_fixtures/: Cargo.toml
vi_rs/vi_fixtures/src/: lib.rs  maps.rs  transitions.rs
vi_rs/vi_reference/: Cargo.toml
vi_rs/vi_reference/src/: action.rs  lib.rs  local.rs  msg.rs  params.rs  state.rs  state_transition.rs  sweep_status.rs  value_iterator.rs
vi_rs/vi_reference/src/solvers/: block.rs  coarse_theta.rs  frontier2d.rs  frontier2d_fused.rs  frontier2d_pad.rs  frontier2d_par.rs  frontier2d_par_unsafe.rs  frontier2d_soa.rs  frontier2d_sparse.rs  frontier3d.rs  measure.rs  mod.rs  prio_lc.rs  priority.rs  stack.rs  stream.rs  tau.rs  topk.rs
vi_rs/vi_reference/tests/: end_to_end.rs
(+22 files in other folders)
