<?xml version="1.0"?>
<package format="3">
  <name>vi_interfaces</name>
  <version>0.1.0</version>
  <description>Action and message interfaces for vi_node (ROS2 Humble + vi_rs)</description>
  <maintainer email="noplab90@gmail.com">nop</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
