[package]
name = "vi_node"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
publish = false

# Must NOT be part of vi_rs's workspace — explicit empty workspace section
# isolates this crate so path deps to ../../vi_rs/* do not pull vi_node into
# their workspace.
[workspace]

[[bin]]
name = "vi_node"
path = "src/main.rs"

[lib]
name = "vi_node"
path = "src/lib.rs"

[dependencies]
ndarray            = "0.16"
crossbeam-channel  = "0.5"
anyhow             = "1"
thiserror          = "1"

vi_core      = { path = "../../vi_rs/vi_core" }
vi_algorithm = { path = "../../vi_rs/vi_algorithm" }
vi_fixtures  = { path = "../../vi_rs/vi_fixtures" }

# ROS deps — these versions are best-guess for rclrs Humble in the Docker image.
# The exact versions provided by `colcon` in the Docker container (Task 11) may
# differ; update after `make ros2-build` reports the actual resolved versions.
rclrs         = "0.7"
std_msgs      = "0.4"
nav_msgs      = "0.4"
geometry_msgs = "0.4"
vi_interfaces = "0.1"

# tokio is used directly by the action-server callback (spawn_blocking, time::interval).
# rclrs uses tokio internally but does not re-export it.
tokio = { version = "1", features = ["rt", "time"] }

# Optional: rayon thread-pool for parallel VI sweeps.
rayon = { version = "1.10", optional = true }

[features]
default     = ["parallel"]
online      = []
parallel    = ["vi_algorithm/parallel", "dep:rayon"]
integration = []

[dev-dependencies]
proptest = "1"
