<?xml version="1.0"?>
<package format="3">
  <name>vi_node</name>
  <version>0.1.0</version>
  <description>ROS2 Rust node that drives vi_rs solvers behind a Vi.action server.</description>
  <maintainer email="noplab90@gmail.com">nop</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cargo</buildtool_depend>

  <depend>rclrs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vi_interfaces</depend>

  <export>
    <build_type>ament_cargo</build_type>
    <install>launch</install>
  </export>
</package>
